--- a/breakout.html
+++ b/breakout.html
@@ -15,7 +15,7 @@
         <p>If you miss the ball, your score and the blocks will reset.</p>
         <button id="close-btn" class="btn">Close</button>
     </div>
-    <button type="button">Start Game!</button>
+    <button id="close-btn" class="btn">Start Game!</button>
 
     <canvas id="canvas" width="800" height="600" ></canvas>
 </body>
