--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website2</title>
+    <link rel="stylesheet" href="css/homepage.css">
 </head>
 <body>
-    <h1>This is my 2nd website!!!</h1>
+<nav class="nav">
+    <div class="container">
+        <h1 class="logo">
+            <a href="index.html">Classwork Website</a>
+        </h1>
+    </div>
+</nav>
+<div class="hero">
+    <div class="container">
+        <h1>Welcome to my Website!</h1>
+        <p>Here is where I store all of my links for classwork.</p>
+    </div>
+</div>
+<section class="container content">
+    <h2>Links To Classwork:</h2>
+        <a href="breakout.html">1. Breakout</a>
+        <br>
+        <a href="insect.html">2. Insect</a>
+        <br>
+        <a href="hangman.html">3. Hangman</a>
+        <br>
+</section>
 </body>
+<script src="js/homepage.js"></script>
 </html>
