--- a/breakout.html
+++ b/breakout.html
@@ -7,18 +7,24 @@
     <link rel="stylesheet" href="css/breakout.css">
 </head>
 <body>
+    <a href = "https://ajaybains195.github.io/website2/">
+        <button class = "home-btn">Home</button>
+    </a>
     <h1>Breakout</h1>
+    <div></div>
     <button id="rules-btn" class="btn rules-btn">Show Rules</button>
     <div id="rules" class="rules">
-        <h2>How To Play</h2>
-        <p>Use your right and left keys to move the paddel to bounce the ball up and break the blocks.</p>
-        <p>If you miss the ball, your score and the blocks will reset.</p>
-        <button id="close-btn" class="btn">Close</button>
+        <h2>How to play:</h2>
+        <p>Use right and left keys to bounce the ball to destroy the bricks</p>
+        <p>If you miss the ball, your progress resets</p>
+        <button id="close-btn" class="btn">close</button>
     </div>
-    <button id="start-btn" class="btn">Launch Game!</button>
 
-    <canvas id="canvas" width="800" height="600" ></canvas>
-    
+    <audio src="images/movement.mp3" controls></audio>
+
+    <button id="start-btn" class="btn">Begin</button>
+
+    <canvas id="canvas" width="768" height="576"></canvas>
+    <script src="js/breakout.js"></script>
 </body>
-<script src="js/breakout.js"></script>
 </html>
